--- a/package.json
+++ b/package.json
@@ -7,21 +7,41 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8",
-    "express": "^4"
+    "express": "^4",
+    "@sap/xssec": "^4",
+    "@cap-js/hana": "^1"
   },
   "devDependencies": {
+    "@cap-js/cds-types": "^0.8.0",
     "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.8.0"
+    "@sap/cds-dk": "^8"
   },
   "scripts": {
     "start": "cds-serve"
   },
-  "cds": { 
+  "cds": {
     "requires": {
       "db": {
-          "kind": "sqlite",
-          "credentials": { "url": "db/my-bookshop.sqlite" }
+        "kind": "sqlite",
+        "credentials": {
+          "url": "db/my-bookshop.sqlite"
+        }
+      },
+      "[production]": {
+        "auth": "xsuaa",
+        "db": {
+          "kind": "hana"
+        }
       }
+    },
+    "sql": {
+      "native_hana_associations": false
+    },
+    "fiori": {
+      "preview": true
+    },
+    "server": {
+      "index": true
     }
   }
 }
