adding crypto function

--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
   "devDependencies": {
     "@cap-js/cds-types": "^0.8.0",
     "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^8"
+    "@sap/cds-dk": "^8",
+    "rimraf": "^5.0.5",
+    "mbt": "^1.2.29"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch-testcryptography": "cds watch --open testcryptography/webapp/index.html?sap-ui-xx-viewCache=false",
+    "undeploy": "cf undeploy my-bookshop --delete-services --delete-service-keys --delete-service-brokers",
+    "build": "rimraf resources mta_archives && mbt build --mtar archive",
+    "deploy": "cf deploy mta_archives/archive.mtar --retries 1",
+    "watch-testcryptography2": "cds watch --open testcryptography2/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "cds": {
     "requires": {
@@ -43,5 +50,8 @@
     "server": {
       "index": true
     }
-  }
+  },
+  "sapux": [
+    "app/testcryptography2"
+  ]
 }
